
* ==================== OTHER CHANGES ====================

* For Valgrind developers: in an outer/inner setup, the outer Valgrind
  will append the inner guest stacktrace to the inner host stacktrace.
  This helps to investigate the errors reported by the outer, when they
  are caused by the inner guest program (such as an inner regtest).
  See README_DEVELOPERS for more info.

* ==================== FIXED BUGS ====================

The following bugs have been fixed or resolved.  Note that "n-i-bz"
stands for "not in bugzilla" -- that is, a bug that was reported to us
but never got a bugzilla entry.  We encourage you to file bugs in
bugzilla (https://bugs.kde.org/enter_bug.cgi?product=valgrind) rather
than mailing the developers (or mailing lists) directly -- bugs that
are not entered into bugzilla tend to get forgotten about or ignored.

To see details of a given bug, visit
  https://bugs.kde.org/show_bug.cgi?id=XXXXXX
where XXXXXX is the bug number as listed below.

342040  Valgrind mishandles clone with CLONE_VFORK | CLONE_VM that clones
        to a different stack.
348616  Wine/valgrind: noted but unhandled ioctl 0x5390 [..] (DVD_READ_STRUCT)
352395  Please provide SVN revision info in --version -v
352767  Wine/valgrind: noted but unhandled ioctl 0x5307 [..] (CDROMSTOP)
358213  helgrind/drd bar_bad testcase hangs or crashes with new glibc pthread
        barrier implementation
371412  Rename wrap_sys_shmat to sys_shmat like other wrappers
371869  support '%' in symbol Z-encoding
371916  execution tree xtree concept
372120  c++ demangler demangles symbols which are not c++
372504  Hanging on exit_group
372600  process loops forever when fatal signals are arriving quickly
373046  Stacks registered by core are never deregistered
373192  Calling posix_spawn in glibc 2.24 completely broken
373555  Rename BBPTR to GSPTR as it denotes guest state pointer only
373938  const IRExpr arguments for matchIRExpr()

Release 3.12.0 (20 October 2016)